2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.mdp, VBNetBinding.mds, Makefile.am: Synchronized the MD
	  project and the Makefile

2007-02-02  Ankit Jain  <jankit@novell.com>

	* VBBindingCompilerServices.cs (Compile): Move resource compiling code
	to ..
	(GetResourceId): .. here. Improve error messages.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/VBNetVisitor.cs, Parser/SharpDevelopTree/Constructor.cs: Track
	  api changes.

2007-01-11  Ankit Jain  <jankit@novell.com>

	* VBBindingCompilerServices.cs (Compile): Echo resgen command line
	for debugging purpose.

2007-01-11  Ankit Jain  <jankit@novell.com>

	* VBBindingCompilerServices.cs (Compile): .resx file has paths
	relative to the .resx file itself.

2006-12-21  Ankit Jain  <jankit@novell.com>

	* VBBindingCompilerServices.cs (Compile): Use project's base
	directory as the working directory when invoking the compiler.
	(DoCompilation): Add param 'working_dir'.

2006-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/VBCompilerPanel.cs, ProjectNodeBuilder.cs,
	  VBBindingCompilerServices.cs: Track changes in the FileService
	  class.
	* Gui/VBDocConfigurationPanel.cs: Use the FileService for deleting
	  files.
	* Gui/CodeGenerationPanel.cs: Removed unused var.

2006-12-15  Ankit Jain  <jankit@novell.com>

	* VBBindingCompilerServices.cs (Compile): Filename arg to resgen should
	be quoted.

2006-12-15  Ankit Jain  <jankit@novell.com>

	* VBBindingCompilerServices.cs (Compile): Use resgen to convert .resx
	to embeddable resource format (.resources). Handle 'null' resourceId.

2006-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.mdp, Parser/SharpDevelopTree/Indexer.cs,
	  Parser/SharpDevelopTree/Method.cs,
	  Parser/SharpDevelopTree/Parameter.cs,
	  Parser/SharpDevelopTree/Event.cs, Parser/SharpDevelopTree/Field.cs,
	  Parser/SharpDevelopTree/Property.cs,
	  Parser/SharpDevelopTree/AttributeSection.cs, Makefile.am: Removed