@@ -5,17 +5,17 @@
        url         = "http://bard.sytes.net/vbnetbinding"
        description = "VB.NET Language Binding"
 	   category    = "Language bindings"
-       version     = "0.4">
+       version     = "0.13.0">
 
   <Runtime>
     <Import assembly = "VBNetBinding.dll"/>
   </Runtime>
 
 	<Dependencies>
-	    <AddIn id="MonoDevelop.Core" version="0.12.0"/>
-	    <AddIn id="MonoDevelop.Core.Gui" version="0.12.0"/>
-	    <AddIn id="MonoDevelop.Projects" version="0.12.0"/>
-		<AddIn id="MonoDevelop.Ide" version="0.12.0"/>
+	    <AddIn id="MonoDevelop.Core" version="0.13.0"/>
+	    <AddIn id="MonoDevelop.Core.Gui" version="0.13.0"/>
+	    <AddIn id="MonoDevelop.Projects" version="0.13.0"/>
+		<AddIn id="MonoDevelop.Ide" version="0.13.0"/>
 	</Dependencies>
 	
   <Extension path = "/SharpDevelop/Workbench/FileFilter">
