@@ -1,3 +1,7 @@
+2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* VBNetBinding.addin.xml: Change add-in versions to 0.13.
+
 2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* VBNetBinding.mdp, VBNetBinding.mds, Makefile.am: Synchronized the MD
